@@ -8,12 +8,12 @@ public class Day01 implements Day {
 
     @Override
     public String part1(List<String> input) {
-        return input.isEmpty() ? "" : input.get(0);
+        return input.isEmpty() ? "" : input.getFirst();
     }
 
     @Override
     public String part2(List<String> input) {
-        return input.isEmpty() ? "" : input.get(0);
+        return input.isEmpty() ? "" : input.getFirst();
     }
 
 }
