@@ -12,7 +12,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class Day01Test {
 
     @Test
-    public void testPart1(){
+    public void testPart1() {
         // Given
         List<String> input = Collections.singletonList("test");
 
@@ -20,11 +20,11 @@ public class Day01Test {
         String result = new Day01().part1(input);
 
         // Then
-        assertEquals(input.get(0), result);
+        assertEquals(input.getFirst(), result);
     }
 
     @Test
-    public void testPart2(){
+    public void testPart2() {
         // Given
         List<String> input = Collections.singletonList("test");
 
@@ -32,6 +32,6 @@ public class Day01Test {
         String result = new Day01().part2(input);
 
         // Then
-        assertEquals(input.get(0), result);
+        assertEquals(input.getFirst(), result);
     }
 }
